# SpaceX_ETL

./: .env  .env.example  .gitignore  Dockerfile_API  Dockerfile_ETL  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: .env.example  main.py
app/api/: api_router.py
app/api/v1/: v1_router.py
app/api/v1/data_mart/: data_mart_router.py
app/db/: base.py
app/db/models/: base.py  launches.py  missions.py  rockets.py
app/etl/: scheduler.py  tasks.py
app/etl/queries/: launches.json  missions.json  rockets.json
app/schemas/api/v1/: data_mart.py
app/schemas/etl/: launches.py  missions.py  rockets.py
app/services/: base.py
app/services/repositories/: base.py  postgres.py
app/settings/: config.py  logs.py
migrations/: env.py
migrations/versions/: 45a60290b914_initial_schema.py  58b0a60c9438_initial_schema.py  cf25d6652826_initial.py  da7edabd3b76_object_url_count_view.py
