[tool.poetry]
name = "space-x-etl"
version = "1.0.0"
description = ""
authors = ["Носов Сергей Олегович <SONosov@datafort.ru>"]
readme = "README.md"
package-mode = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "~3.11.9"
apscheduler = "3.10.4"
fastapi = "0.112.1"
uvicorn = "0.30.6"
gunicorn = "23.0.0"
pydantic = "2.8.2"
pydantic-settings = "2.4.0"
asyncpg = "0.29.0"
sqlalchemy = "2.0.32"
alembic = "1.13.2"
backoff = "^2.2.1"



[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-xdist = "^3.6.1"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.0"
pytest-randomly = "^3.15.0"
pytest-icdiff = "^0.9"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
flake8-aaa = "^0.17.0"
flake8-pytest-style = "^2.0.0"
bandit = "^1.7.9"
mypy = "^1.11.1"


[tool.isort]
profile = 'black'


[tool.black]
line-length = 120
skip-string-normalization = true


[tool.flake8]
exclude = [".git", "__pycache__"]
max-line-length = 120


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = [
    "pydantic.mypy"
]

